fixed broken layouts and added background image

--- a/css/addMember.css
+++ b/css/addMember.css
@@ -19,3 +19,8 @@ input{
     left: 48%;
     z-index: -999;
 }
+body{
+    background-image: url("../images/bg-image-1.png");
+    background-repeat: no-repeat;
+    background-size: auto;
+}
